--- a/frontend/src/style/_login.scss
+++ b/frontend/src/style/_login.scss
@@ -11,9 +11,15 @@
 	{
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 		gap: 1rem;
 
 		width: 14rem;
+
+		input
+		{
+			width: 100%;
+		}
 
 		section
 		{
