--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -8,6 +8,7 @@
 @import "root/root";
 @import "root/header";
 @import "root/navbar";
+@import "root/home";
 @import "root/element";
 @import "root/listelement";
 
